@@ -1,5 +1,7 @@
 package com.practice.Assignments.lld2.day140adapterandfacade.socailadapter.external;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class FacebookApi {
@@ -7,7 +9,7 @@ public class FacebookApi {
     public List<FacebookPost> fetchFacebookPosts(Long userId, Long timestamp) {
         // Implementation to fetch Facebook posts
         ApiUtils.logFacebookGetPosts();
-        return List.of(new FacebookPost("1", "Hello World", 1L, 123456789L));
+        return new ArrayList<>(Arrays.asList(new FacebookPost("1", "Hello World", 1L, 123456789L)));
     }
 
     public void postFacebookStatus(Long user, String status) {
